--- a/client/src/HomePage/Home.scss
+++ b/client/src/HomePage/Home.scss
@@ -1,3 +1,168 @@
+*{
+    margin: 0px;
+}
 .root{
-    color: red;
+    width: 100%;
+    height: 100vh;
+}
+.section-container{
+    width: 1200px;
+    margin: 0 auto;
+}
+.first-section{
+    width:100%;
+    height:448px;
+    background: url('../lib//img/bg.jpg') no-repeat;
+    background-size: 100% 620px;
+    .mongolia{
+        width: 100%;height: 100%;
+        background:rgba(0,0,0,0.6);
+    }
+    .section-container{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        color: white;
+        height:calc(100% - 64px);
+        padding-top: 64px;
+        .title{
+            font-size: 46px;
+        }
+        .subTitle{
+            font-size: 18px;
+        }
+    }
+}
+.second-section{
+    width: 100%;
+    height: 554px;
+    border-bottom: 1px solid gainsboro;
+    .section-container{
+        width: 1200px;
+        height: 100%;
+        padding-top: 64px;
+        text-align: center;
+        font-family: DIN Regular, "Hiragino Sans GB", Arial, Microsoft YaHei, sans-serif;
+        .title{
+          font-size: 32px;
+          color:#333333;
+          font-weight: 100;
+        }
+        .subTitle{
+          opacity: 0.5;
+          font-size: 20px;
+          font-weight: 50;
+          line-height: 24px;
+        }
+        .function-list{
+            width: 100%;
+            height:calc(100% - 180px);
+            padding: 0px;
+            margin: 0px;
+            li{
+                // border: 1px solid red;
+                cursor: pointer;
+                vertical-align: top;
+                .iconfont{
+                    font-size: 36px;
+                }
+                padding-top: 48px;
+                display:inline-block;
+                height:40%;
+                width: 400px;
+                text-align: center;
+                .red-box{
+                    width:42px;
+                    height: 52px;
+                    display: block;
+                    margin: 0 auto;
+                    border-bottom: 1px solid #F55345;
+                }
+                .title{
+                    font-size: 20px;
+                    margin-top:10px;
+                }
+            }
+            .function-special{
+                .red-box{
+                    width: 162px;
+                }
+                .title{
+                    margin-top: 20px;
+                }
+                .description{
+                    width:50%;
+                    margin:10px auto;
+                    font-size: 14px;
+                    color: #666666
+                }
+            }
+        }
+    }
+}
+.login{
+    width: 100%;
+    text-align: center;
+    .section-title{
+        margin-top:48px;
+        font-size: 32px;
+        color:#333333;
+        font-weight: 100;
+    }
+    .section-subTitle{
+        opacity: 0.5;
+        font-size: 20px;
+        line-height: 32px;
+        font-weight: 50;
+    }
+    .section-container{
+        width:1200px;
+        margin:0 auto;
+        display:flex;
+        .login-item{
+            width:400px;
+            padding:10px;
+            position: relative;
+            .mongolia{
+                z-index: 100;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                width:calc(100% - 20px);
+                height:198px;
+                border-radius: 8px;
+                background: rgba(0,0,0,0.7);
+                color: white;
+                font-size: 24px;
+                font-weight:lighter;
+                .description{
+                    font-size: 14px;
+                    padding: 0 20px;
+                    text-align: center;
+                    line-height:24px;
+                }
+                .btn{
+                    &:hover{
+                        cursor: pointer;
+                        background: orangered;
+                    };
+                    width: 80px;
+                    height: 30px;
+                    background: #F55345;
+                    border-radius: 4px;
+                    text-align: center;
+                    margin:10px auto;
+                    line-height: 30px;
+                    font-size: 16px;
+                }
+            }
+            img{
+                width:100%;
+                border-radius:8px;
+            }
+        }
+    }
 }
