--- a/client/src/Login/login.scss
+++ b/client/src/Login/login.scss
@@ -4,6 +4,12 @@
 body{
     min-width: 1200px;
 }
+.error{
+    font-size: 16px;
+    color:  red;
+    padding-left: 30px;
+    line-height: 32px;
+}
 .login-root{
     width: 100%;
     height: 100vh;
