--- a/client/src/lib/Components/Header/Header.scss
+++ b/client/src/lib/Components/Header/Header.scss
@@ -36,6 +36,7 @@
                     height: 320px;
                     background: white;
                     position: absolute;
+                    border: 1px solid gainsboro;
                     left: -250px;
                     border-radius: 4px;
                     padding: 20px 20px;
