--- a/client/src/Rank/rank.scss
+++ b/client/src/Rank/rank.scss
@@ -6,8 +6,13 @@ body{
 }
 .rank-root{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: rgba(247,248,250,1);
+    img{
+        width: 50px;
+        height: 50px;
+        margin-left: calc(50% - 25px);
+    }
     .rank-header{
         width: 100%;
         height: 70px;
@@ -35,9 +40,46 @@ body{
             display: flex;
             align-items: center;
             .select{
-                width: 150px;
+                // width: 150px;
                 height: 30px;
+                margin-right: 20px;
             }
         }
+        .myself,.others{
+            border-radius: 0px 0px 4px 4px;
+            width: 100%;
+            padding:10px 20px;
+            background: white;
+            margin-bottom: 30px;
+            box-shadow: 1px 1px 5px 0px gainsboro;
+            .myself-title,.myself-container{
+                text-align: center;
+                ul{
+                    padding: 0px;
+                    li{
+                        vertical-align:bottom;
+                        line-height: 40px;
+                        display: inline-block;
+                        font-size: 16px;
+                        width: 10%;
+                    }
+                }
+            }
+        }
+        .others{
+            margin-bottom: 10px;
+        }
     }
+}
+.iconguanjun,.iconyajun,.iconjijun{
+    font-size: 42px;
+}
+.iconguanjun{
+    color: #FED530
+}
+.iconyajun{
+    color: #E8E8E8;
+}
+.iconjijun{
+   color:  #A9733D
 }
