--- a/client/src/lib/Components/Header/Header.scss
+++ b/client/src/lib/Components/Header/Header.scss
@@ -10,6 +10,7 @@
         .logo-text{
             width:350px;
             padding-top: 10px;
+            cursor: pointer;
             .title{
                 font-size: 24px;
             }
@@ -40,6 +41,7 @@
                     left: -250px;
                     border-radius: 4px;
                     padding: 20px 20px;
+                    z-index: 200;
                     .tool-list{
                         padding: 0px;
                         height: 100%;
