--- a/client/src/lib/Components/Select/select.scss
+++ b/client/src/lib/Components/Select/select.scss
@@ -15,15 +15,27 @@
         padding: 0 5px;
     }
     .select-icon{
-        position: absolute;
-        right: 4px;
+        // position: absolute;
+        // right: 4px;
+        margin-left:5px;
         color: gainsboro;
     }
     .board{
         width: 100%;
-        height: 300px;
         position: absolute;
+        background: white;
         top: 100%;
         z-index: 200;
+        .list{
+            padding: 0px;
+            li{
+                padding:0 10px;
+                display: block;
+                line-height: 30px;
+                &:hover{
+                    background: gainsboro;
+                }
+            }
+        }
     }
 }
